[package]
name = "ruci"
version = "1.0.1"
description = "A UCI (Universal Chess Interface) crate."
categories = ["parser-implementations", "game-development", "no-std"]
keywords = ["chess", "uci", "parser"]
include = ["src", "README.md", "LICENSE"]
edition = "2021"
authors = ["Leonard D. <tigerros.gh@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/tigerros/ruci"
rust-version = "1.81.0"

[dependencies]
dry-mods = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
shakmaty = { workspace = true }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[features]
# No features are turned on by default.
default = []
# Enables serde support for most types. All implementations are derived with no parameters. Requires `std`.
serde = ["dep:serde", "shakmaty/serde"]
# Adds the `Engine` struct for communicating with an engine. Requires `std`.
engine-sync = []
# Enables the `engine-sync` feature and adds async versions of all functions using tokio.
engine-async = ["engine-sync", "dep:tokio"]
# Enables the `engine-async` and `tokio/process` features and adds a tokio version of `Engine::from_process`.
tokio-process = ["engine-async", "tokio/process"]
# Enables the `engine-sync` feature for shared error types and adds the `Gui` struct for communicating with a GUI.
gui-sync = ["engine-sync"]
# Enables the `gui-sync` feature and adds async versions of all functions using tokio.
gui-async = ["gui-sync", "dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
pretty_assertions = { version = "1", features = ["unstable"] }
shakmaty-uci = { version = "~0.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = "1"
vampirc-uci = { version = "~0.11" }

[[bench]]
name = "to_str"

[[bench]]
name = "from_str"

[workspace]
members = ["examples/engine", "examples/engine-client", "examples/engine-server", "examples/flexible-io", "examples/go-std", "examples/go-tokio"]

[workspace.dependencies]
ruci = { version = "1", path = "." }
tokio = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
paste = { version = "1", default-features = false }
shakmaty = { version = "~0.27", default-features = false }
anyhow = { version = "1", default-features = false }
dry-mods = { version = "~0.1", default-features = false }
