[package]
name = "ruci"
version = "2.1.0"
description = "A UCI (Universal Chess Interface) crate."
categories = ["parser-implementations", "game-development", "no-std"]
keywords = ["chess", "uci", "parser"]
include = ["src", "README.md", "LICENSE"]
edition = "2024"
authors = ["Leonard D. <tigerros.gh@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/tigerros/ruci"
rust-version = "1.85.1"

[dependencies]
dry-mods = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
shakmaty = { workspace = true }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[features]
# No features are turned on by default.
default = []
# Enables serde support for most types. All implementations are derived with no parameters.
serde = ["dep:serde", "serde/alloc", "shakmaty/serde", "shakmaty/alloc"]
# Adds types shared by `engine-sync` and `gui-sync`. Requires `std`. Don't enable this yourself.
io = []
# Adds the `Engine` struct for communicating with an engine.
engine-sync = ["io"]
# Adds async versions of `Engine` functions.
engine-async = ["engine-sync", "dep:tokio"]
# Adds a tokio version of `Engine::from_process`.
tokio-process = ["engine-async", "tokio/process"]
# Adds the `Gui` struct for communicating with a GUI.
gui-sync = ["io"]
# Adds async versions of `Gui` functions.
gui-async = ["gui-sync", "dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
pretty_assertions = { version = "1", features = ["unstable"] }
shakmaty-uci = { version = "~0.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = "1"
vampirc-uci = { version = "~0.11" }

[[bench]]
name = "to_str"

[[bench]]
name = "from_str"

[workspace]
members = ["examples/engine", "examples/engine-client", "examples/engine-server", "examples/engine-stdio", "examples/go-std", "examples/go-tokio"]

[workspace.dependencies]
ruci = { version = "2", path = "." }
tokio = { version = "1.18.2", default-features = false }
serde = { version = "1.0.197", default-features = false }
paste = { version = "1", default-features = false }
shakmaty = { version = "0.27.3", default-features = false }
anyhow = { version = "1.0.87", default-features = false }
dry-mods = { version = "~0.1", default-features = false }
